Add contact and privacy pages Write privacy page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -10,7 +10,12 @@
                             C'est une communauté en ligne qui permet de partager et de découvrir de bonnes idées, 
                             d'avoir des débats et de se faire aider. Tout le monde peut partager des articles, 
                             des questions, des discussions, etc. pourvu qu'il ait les droits sur les mots 
-                            qu'il partage. La publication de votre propre blog est la bienvenue.
+                            qu'il partage. La publication de votre propre blog est la bienvenue.<br><br>
+                            <blockquote><em>
+                                "Le grin au Mali est un lieu de rencontre, de distraction, d’échanges, 
+                                là où les jeunes de même génération et même les adultes, se réunissent 
+                                autour du thé"
+                            </em></blockquote>
                         </h5>
                     </div>
                 </div>
@@ -21,7 +26,8 @@
                         <span class="menu-content"><%= link_to  "Accueil", root_path %></span>
                         <span class="menu-content"><%= link_to  "Sponsors", sponsors_path %></span>
                         <span class="menu-content"><%= link_to  "Equipe", team_path %></span>
-                        <span class="menu-content">Contact</span>
+                        <span class="menu-content"><%= link_to  "Contact", contact_path %></span>
+                        <span class="menu-content"><%= link_to  "Confidentialité", privacy_path %></span>
                         <span class="menu-content"><%= link_to  "Conditions d'utilisation", cgu_path %></span>
                         <span class="menu-content"><%= link_to  "Code de conduite", terms_path %></span>
                     </div>
