--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -50,8 +50,11 @@
                 <h6><%= link_to  "Equipe", team_path %></h6>
               </div>
           <div>
-            <h6>Contact</h6>
+            <h6><%= link_to  "Contact", contact_path %></h6>
           </div>
+          <div>
+              <h6><%= link_to  "Confidentialité", privacy_path %></h6>
+            </div>
           <div>
               <h6><%= link_to  "Conditions d'utilisation", cgu_path %></h6>
           </div>
