Remove bootstrap gem and  configuration

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,14 +1,14 @@
 <div class="signup-bg">
   <div class="container content">
     <div class="row">
-      <div class="col-md-8 col-12 col-sm-12">
+      <div class="col-md-8 col-xs-12">
         <h1 class="brand text-white">DigitalGrin</h1>
         <h3 class="text-white">Communauté francophone où les amoureux<br> des technologies partagent leurs idées 
           et s’aident mutuellement à progresser.<br><br>Tout le monde peut partager des articles,
           des questions, des discussions et trouver des mentors.
         </h3>
       </div>
-      <div class="col-md-4 col-1 col-sm-12">
+      <div class="col-md-4 col-xs-12">
         <div class="card">
           <div class="card-header bg-warning text-black text-center"><h4>INSCRIVEZ-VOUS</h4></div>
           <div class="card-body">
