--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <%= csp_meta_tag %>
      <!-- Required meta tags -->
      <meta charset="utf-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Google fonts Raleway -->
      <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
