Change ruby version to 2.6.3 Rezising connexion and inscription pages Custumize profil page Add contact page

--- a/app/assets/stylesheets/registrations.css.scss
+++ b/app/assets/stylesheets/registrations.css.scss
@@ -1,11 +1,11 @@
 .signup-bg {
-    /* height: 100vh; */
+    height: 100vh;
     margin-top: 0;
     /* background: url(signup-bg.jpg) no-repeat center center fixed; */
     background-color: #696969;
     background-size: cover;
-    /* overflow: hidden; */
-    overflow: scroll;
+    overflow: hidden;
+    /* overflow: scroll; */
  }
 
  .content {
