--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -26,7 +26,7 @@
       </a>
       <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
         <% if user_signed_in? %>
-          <div class="dropdown-item"><strong><%= current_user.email %></strong></div>
+          <div class="dropdown-item"><strong><%=link_to current_user.email, profile_path(current_user.id) %></strong></div>
           <div class="dropdown-item"><%= link_to "Deconnexion", destroy_user_all_session_path, method: :delete %></div>
         <% end %>
       </div>
