--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -16,6 +16,12 @@
         </div><br>
 
         <div class="field">
+          <%= f.label :"Choisir une photo de profil" %><br />
+          <%= f.hidden_field :image, class: "form-control" %>
+          <%= f.file_field :image %>
+        </div><br>
+
+        <div class="field">
           <%= f.label :'Bio (Parlez nous un peu de vous)' %><br />
           <%= f.text_area :bio, autofocus: true, autocomplete: "bio", class: "form-control" %>
         </div><br>
